fixed nav bar spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ header {
 /*Nav Styles */
 .nav {
 	font-size:1.2em;
-	margin-top:150px;
+	margin-top:156px;
 	float: right;
 
 }
